updated APRS, WSPR, listening to ISS, a few typos

--- a/hamster-handbook.html
+++ b/hamster-handbook.html
@@ -443,8 +443,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tim Born</span><br>
 <span id="email" class="email"><a href="mailto:Timothy.D.Born@gmail.com">Timothy.D.Born@gmail.com</a></span><br>
-<span id="revnumber">version 0.4,</span>
-<span id="revdate">July 26, 2021</span>
+<span id="revnumber">version 0.5,</span>
+<span id="revdate">July 27, 2021</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -474,6 +474,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel1">
 <li><a href="#_project_1_aprs_on_the_cheap">Project #1 - APRS on the Cheap</a></li>
 <li><a href="#_project_2_winlink_on_kenwood_tm_d710ga">Project #2 - WinLink on Kenwood TM-D710GA</a></li>
+<li><a href="#_project_3_listen_to_the_international_space_station">Project #3 - Listen to the International Space Station</a></li>
+<li><a href="#_project_4_see_how_far_you_can_whisper">Project #4 - See How Far You Can Whisper</a></li>
+<li><a href="#_project_5_send_a_text_message_from_your_radio">Project #5 - Send A Text Message From Your Radio</a></li>
 </ul>
 </li>
 <li><a href="#_reference_materials">Reference Materials</a>
@@ -605,6 +608,9 @@ Oldest digital format.</p>
 </div>
 <div class="paragraph">
 <p><a href="https://aprs.fi" class="bare">https://aprs.fi</a></p>
+</div>
+<div class="paragraph">
+<p><a href="https://smsgte.org/">SMSGTE</a> is a way to bridge APRS messaging and SMS (cell phone texting).</p>
 </div>
 </div>
 </div>
@@ -765,6 +771,37 @@ Proposed solution: APRSdriod running on cell phone, connected to a dual band Han
 <p>can you send/receive from e.g. gmail??</p>
 </li>
 </ol>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_project_3_listen_to_the_international_space_station">Project #3 - Listen to the International Space Station</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Even with a handheld, if you know the frequency and when to expect them, you can always listen in.</p>
+</div>
+<div class="paragraph">
+<p><a href="https://spotthestation.nasa.gov/sightings/view.cfm?country=United_States&amp;region=Arizona&amp;city=Phoenix#.YQBMBRNKg-Q" class="bare">https://spotthestation.nasa.gov/sightings/view.cfm?country=United_States&amp;region=Arizona&amp;city=Phoenix#.YQBMBRNKg-Q</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_project_4_see_how_far_you_can_whisper">Project #4 - See How Far You Can Whisper</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Using something like WSTJ-X and the WSPR protocol, you can experiment to see how far you can actually go on a few watts (or less!).
+Multi-platform, multiband, cool mapping tool to see your results.</p>
+</div>
+<div class="paragraph">
+<p><a href="https://physics.princeton.edu/pulsar/k1jt/wspr.html">WSPR</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_project_5_send_a_text_message_from_your_radio">Project #5 - Send A Text Message From Your Radio</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Try using <a href="https://smsgte.org/">SMSGTE</a> to connect (bi-directionally!) your APRS-enabled radio with SMS.</p>
 </div>
 </div>
 </div>
@@ -1109,7 +1146,11 @@ Proposed solution: APRSdriod running on cell phone, connected to a dual band Han
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">BAA-BZZ</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">China (People&#8217;s Republic of)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">China (People&#8217;s Republic of) (see carve-out for Taiwan below)</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">BM-BQ, BU-BX</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Taiwan</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">CAA-CEZ</p></td>
@@ -2307,13 +2348,16 @@ by Arie Voors", <a href="https://www.qsl.net/4nec2/" class="bare">https://www.qs
 <li>
 <p>MMANA-GAL - antenna analysis software, <a href="https://hamsoft.ca/pages/mmana-gal.php" class="bare">https://hamsoft.ca/pages/mmana-gal.php</a></p>
 </li>
+<li>
+<p>WSJT-X - a collection of weak-signal protocols; multiplatform - <a href="https://physics.princeton.edu//pulsar/K1JT/wsjtx.html" class="bare">https://physics.princeton.edu//pulsar/K1JT/wsjtx.html</a></p>
+</li>
 </ol>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 0.4<br>
-Last updated 2021-07-26 13:57:00 -0700
+Version 0.5<br>
+Last updated 2021-07-27 11:29:30 -0700
 </div>
 </div>
 </body>
